--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -4,17 +4,14 @@ nav {
 }
 
 #logo {
-  width: 110px;
-  height: 44.17px;
-
-  font-family: 'Myanmar Sans Pro';
+  font-family: 'myanmar-khyay', sans-serif;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 700;
   font-size: 32px;
   line-height: 42px;
-
   color: #000000;
-  margin-right: auto;
+  margin: 0 auto 0 3%;
+  padding: 1%;
   text-decoration: none;
 }
 
@@ -27,7 +24,7 @@ nav {
 }
 
 .nav-links a {
-  font-family: 'Avenir LT Pro';
+  font-family: 'Avenir LT Pro 45 Book';
   font-style: normal;
   font-weight: 700;
   font-size: 15px;
