--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -4,8 +4,7 @@ nav {
 }
 
 #logo {
-  font-family: 'myanmar-khyay', sans-serif;
-  font-style: normal;
+  font-family: 'Avenir LT Pro 45 Book';
   font-weight: 700;
   font-size: 32px;
   line-height: 42px;
