style the navbar and fix linters

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -4,11 +4,11 @@ nav {
 }
 
 #logo {
-  font-family: 'Avenir LT Pro 45 Book';
+  font-family: 'Avenir LT Pro 45 Book', sans-serif;
   font-weight: 700;
   font-size: 32px;
   line-height: 42px;
-  color: #000000;
+  color: #000;
   margin: 0 auto 0 3%;
   padding: 1%;
   text-decoration: none;
@@ -23,15 +23,13 @@ nav {
 }
 
 .nav-links a {
-  font-family: 'Avenir LT Pro 45 Book';
+  font-family: 'Avenir LT Pro 45 Book', sans-serif;
   font-style: normal;
-  font-weight: 700;
-  font-size: 15px;
+  font-weight: 600;
+  font-size: 14px;
   line-height: 18px;
-
   letter-spacing: 0.115em;
   text-transform: uppercase;
-
   color: rgba(0, 0, 0, 0.6);
   text-decoration: none;
 }
